// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button has box-shadow with type 1`] = `
.c0 {
  white-space: nowrap;
  background-color: #F5941C;
  border-width: 0;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 16px;
  line-height: 19px;
  padding: 12px 28px;
  box-shadow: 0 0 0 4px #F5941C;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 4px;
  overflow: hidden;
  opacity: 1;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus,
.c0:active {
  outline: none;
  background-color: #DB8419;
  box-shadow: 0 0 0 4px #DB8419;
}

.c0:active {
  box-shadow: 0 0 0 2px #DB8419;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: 0.16s;
  transition-duration: 0.16s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transition-timing: ease-out;
  transition-timing: ease-out;
}

<button
  className="c0"
  type="warning"
>
  foo
</button>
`;

exports[`button renders 1`] = `
.c0 {
  white-space: nowrap;
  border-width: 0;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 16px;
  line-height: 19px;
  padding: 12px 28px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 4px;
  overflow: hidden;
  opacity: 1;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus,
.c0:active {
  outline: none;
}

.c0:active {
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: 0.16s;
  transition-duration: 0.16s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transition-timing: ease-out;
  transition-timing: ease-out;
}

<button
  className="c0"
/>
`;
